--- a/src/scss/pages/_booking.scss
+++ b/src/scss/pages/_booking.scss
@@ -35,7 +35,15 @@
 		border: 1px solid #cacaca;
 		padding: 10px 20px;
 		border-radius: 0;
-		height: 50px;	
+		height: 50px;
+		&:hover,
+		&:active,
+		&:focus{
+			border-color: $primary;
+		}
+		&:invalid{
+			border-color: $danger;
+		}
 	}
 	textarea.form-control{
 		height:220px;
